[gd_scene load_steps=3 format=3 uid="uid://duynvv1sr2ilc"]

[ext_resource type="Script" uid="uid://byfoir2ly8jfv" path="res://scripts/menu_stat.gd" id="1_5bgis"]
[ext_resource type="Texture2D" uid="uid://bos8oa7ei14bd" path="res://sprites/Menu/Portrait_Player.png" id="2_ua3ba"]

[node name="StatMenu" type="MarginContainer"]
clip_contents = true
offset_left = 70.0
offset_top = 16.0
offset_right = 568.0
offset_bottom = 336.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_5bgis")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Left" type="Button" parent="HBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
text = "◀ L"

[node name="NameBox" type="PanelContainer" parent="HBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/PanelContainer/NameBox"]
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="Right" type="Button" parent="HBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
text = "R ▶"

[node name="CharInfo" type="PanelContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo"]
layout_mode = 2

[node name="LeftContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/LeftContainer"]
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/LeftContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_ua3ba")
stretch_mode = 2

[node name="Name" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/LeftContainer/VBoxContainer"]
layout_mode = 2
text = "Name"

[node name="Class" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/LeftContainer/VBoxContainer"]
layout_mode = 2
text = "Classs"

[node name="CenterContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HP" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "HP: 200"
vertical_alignment = 1

[node name="MP" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "MP: 75"
vertical_alignment = 1

[node name="STR" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "STR: 0"
vertical_alignment = 1

[node name="VIG" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "VIG: 0"
vertical_alignment = 1

[node name="SPI" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "SPI: 0"
vertical_alignment = 1

[node name="AGI" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "AGI: 0"
vertical_alignment = 1

[node name="INT" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "INT: 0"
vertical_alignment = 1

[node name="RightContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ATK" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/RightContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "ATK: 0"
vertical_alignment = 1

[node name="ACC" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/RightContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "ACC: 0"
vertical_alignment = 1

[node name="DEF" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/RightContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "DEF: 0"
vertical_alignment = 1

[node name="EVA" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/RightContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "EVA: 0"
vertical_alignment = 1

[node name="MDF" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/RightContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "MDF: 0"
vertical_alignment = 1

[node name="MPW" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/RightContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "MPW: 0"
vertical_alignment = 1

[node name="SPE" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/RightContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "SPE: 0"
vertical_alignment = 1

[node name="DescriptionPanel" type="PanelContainer" parent="HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Description" type="Label" parent="HBoxContainer/MarginContainer/DescriptionPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "DESCRIZIONE"

[node name="ButtonPanel" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="esc" type="Button" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
text = "close"

[node name="sort" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Info"

[node name="space" type="PanelContainer" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3

[node name="Info" type="PanelContainer" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ButtonPanel/Info"]
layout_mode = 2

[node name="Gold" type="HBoxContainer" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer/Gold"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Gold:"

[node name="Gold" type="Label" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer/Gold"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Time" type="HBoxContainer" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer/Time"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Time:"

[node name="Time" type="Label" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer/Time"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[connection signal="pressed" from="HBoxContainer/MarginContainer/PanelContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/PanelContainer/Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/esc" to="." method="_on_esc_pressed"]
